--- a/lab5.html
+++ b/lab5.html
@@ -11,6 +11,34 @@
         Name: <input type="text" id="name"><br><br> 
         Email: <input type="text" id="email"><br><br> 
         Password: <input type="password" id="password"><br><br> 
-        <input type="submit" value="Register"> </form>
+        <input type="submit" value="Register"> 
+    </form>
+    <script>
+        function validateForm() {
+            var name = document.getElementById("name").value;
+            var email = document.getElementById("email").value;
+            var password = document.getElementById("password").value;
+
+            if (name === "" || email === "" || password === "") {
+                alert("All fields must be filled out");
+                return false;
+            }
+            if(!email.includes("@")){
+                alert("Invalid email format");
+                return false;
+            }
+            var emailPattern = /^[^\s@]+@[^\s@]+\.[^\s@]+$/;
+            if (!emailPattern.test(email)) {
+                alert("Invalid email format");
+                return false;
+            }
+            if (password.length < 6) {
+                alert("Password must be at least 6 characters long");
+                return false;
+            }
+            alert("Registration successful!");
+            return true;
+        }
+    </script>
 </body>
 </html>
